{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 16,
  "lineage": "b950536b-3100-ae97-80ea-9721b839585c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-016d882fbc080f294",
            "domain": "vpc",
            "id": "eipalloc-098bb5801dd2b9672",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0e2f86c1fb1a15249",
            "private_dns": "ip-10-0-0-161.eu-west-2.compute.internal",
            "private_ip": "10.0.0.161",
            "public_dns": "ec2-35-177-25-85.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.25.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "devops_course",
              "Name": "devops_course_eip"
            },
            "tags_all": {
              "Env": "devops_course",
              "Name": "devops_course_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:510036503349:internet-gateway/igw-0e8d4ee2077fb6562",
            "id": "igw-0e8d4ee2077fb6562",
            "owner_id": "510036503349",
            "tags": {
              "Env": "devops_course",
              "Name": "devops_course_igw"
            },
            "tags_all": {
              "Env": "devops_course",
              "Name": "devops_course_igw"
            },
            "vpc_id": "vpc-0793d6c465bcb65f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098bb5801dd2b9672",
            "connectivity_type": "public",
            "id": "nat-05895a65c61c66c4a",
            "network_interface_id": "eni-0e2f86c1fb1a15249",
            "private_ip": "10.0.0.161",
            "public_ip": "35.177.25.85",
            "subnet_id": "subnet-035e3e5ab7adf5a7b",
            "tags": {
              "Environment": "devops_course",
              "Name": "devops_course_nat_gw"
            },
            "tags_all": {
              "Environment": "devops_course",
              "Name": "devops_course_nat_gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:510036503349:route-table/rtb-01abcf9898e1cd515",
            "id": "rtb-01abcf9898e1cd515",
            "owner_id": "510036503349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8d4ee2077fb6562",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "devops_course",
              "Name": "devops_course_public_rtb"
            },
            "tags_all": {
              "Env": "devops_course",
              "Name": "devops_course_public_rtb"
            },
            "vpc_id": "vpc-0793d6c465bcb65f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0083b7677e43bde9a",
            "route_table_id": "rtb-01abcf9898e1cd515",
            "subnet_id": "subnet-035e3e5ab7adf5a7b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.custom_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:510036503349:security-group/sg-039f1883357972b74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039f1883357972b74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "510036503349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "devops_course"
            },
            "tags_all": {
              "Environment": "devops_course"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793d6c465bcb65f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:510036503349:subnet/subnet-035e3e5ab7adf5a7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-035e3e5ab7adf5a7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510036503349",
            "tags": {
              "Env": "devops_course",
              "Name": "devops_course_subnet_public"
            },
            "tags_all": {
              "Env": "devops_course",
              "Name": "devops_course_subnet_public"
            },
            "vpc_id": "vpc-0793d6c465bcb65f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:510036503349:vpc/vpc-0793d6c465bcb65f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07bde77abc2f313bf",
            "default_route_table_id": "rtb-092c377a86c47410f",
            "default_security_group_id": "sg-0d64065eaf607f34e",
            "dhcp_options_id": "dopt-aa5152c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0793d6c465bcb65f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092c377a86c47410f",
            "owner_id": "510036503349",
            "tags": {
              "Env": "devops_course",
              "Name": "devops_course_vpc"
            },
            "tags_all": {
              "Env": "devops_course",
              "Name": "devops_course_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093d303510c432519",
            "arn": "arn:aws:ec2:eu-west-2:510036503349:instance/i-063c1240e249428df",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c1240e249428df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-course",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c66c9c407ebdfe6f",
            "private_dns": "ip-10-0-0-157.eu-west-2.compute.internal",
            "private_ip": "10.0.0.157",
            "public_ip": "3.8.8.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3e6f1d1acca1805",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035e3e5ab7adf5a7b",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039f1883357972b74"
            ]
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_instance.aws_key_pair.generated_key",
            "module.web_instance.data.aws_ami.ubuntu",
            "module.web_instance.tls_private_key.example",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    }
  ]
}